--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -4,3 +4,9 @@
     font-weight: bolder;
     width: 100%;   
 }
+
+#Janelle-tag{
+    color:black;
+    font-size: 25px;
+    font-weight: lighter;
+}
