--- a/src/components/Pages/About/About.css
+++ b/src/components/Pages/About/About.css
@@ -39,6 +39,6 @@ hr {
 
 body {
     font-family: 'Nanum Myeongjo', serif;
-    /* background: linear-gradient(to top, transparent, lightyellow), url("./../../assets/topomap.jpg");  */
+    background: linear-gradient(to top, transparent, lightyellow), url("https://res.cloudinary.com/dbd23cfw2/image/upload/v1605118088/Portfolio%20images/topomap_zddpcm.jpg"); 
     background-attachment: fixed;  
 }
